[workspace]

resolver = "2"

members = ["eth-riscv-interpreter", "eth-riscv-syscalls", "r55"]
default-members = ["eth-riscv-interpreter", "eth-riscv-syscalls", "r55"]

exclude = ["contract-derive", "erc20", "erc20x", "eth-riscv-runtime"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/leonardoalt/r5"

[workspace.dependencies]
eth-riscv-interpreter = { path = "eth-riscv-interpreter" }
eth-riscv-syscalls = { path = "eth-riscv-syscalls" }

eyre = "0.6.12"
thiserror = "2.0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
