[package]
name = "erc20x_standalone"
version = "0.1.0"
edition = "2021"

[features]
default = []
deploy = []

[dependencies]
contract-derive = { path = "../contract-derive" }
eth-riscv-runtime = { path = "../eth-riscv-runtime" }

alloy-core = { version = "0.7.4", default-features = false }
alloy-sol-types = { version = "0.7.4", default-features = false }

[[bin]]
name = "runtime"
path = "src/lib.rs"

[[bin]]
name = "deploy"
path = "src/lib.rs"
required-features = ["deploy"]

[profile.release]
lto = true
opt-level = "z"
