[package]
name = "eth-riscv-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rvemu = { git="https://github.com/r55-eth/rvemu.git"}

thiserror.workspace = true

goblin = { version = "0.8.2", features = ["std"] }

[dev-dependencies]
eyre.workspace = true
