[package]
name = "r55"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eth-riscv-interpreter.workspace = true
eth-riscv-syscalls.workspace = true

revm = { version = "9.0.0", features = ["std"] }
rvemu = { git="https://github.com/r55-eth/rvemu.git" }

alloy-core = "0.7.4"
alloy-sol-types = "0.7.4"

eyre.workspace = true
thiserror.workspace = true

[[bin]]
name = "r55"
