[package]
name = "r55"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eth-riscv-interpreter.workspace = true
eth-riscv-syscalls.workspace = true

revm = { version = "19.4.0", features = ["std"] }
rvemu = { git = "https://github.com/r55-eth/rvemu.git" }

alloy-core = "0.8.20"
alloy-primitives = "0.8.20"
alloy-sol-types = "0.8.20"

eyre.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
